# llmxml

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
evals/: sync_tests.ipynb
examples/: async_anthropic.py  async_gemini.py  async_openai copy.py  async_openai.py  sync_anthropic.py  sync_gemini.py  sync_openai.py  sync_tests.ipynb
llmxml/: __init__.py  parser.py  parser2.py  patch.py  prompting.py  prompts.py
tests/: parse1.py  test_parser.py  test_prompt.py
tests/test_files/: action.xml  basic_response.xml  complete.xml  custom.xml  details.xml  enum_basic.xml  enum_nested.xml  movies.xml  partial.xml  search.xml  streaming.xml
